try and fix wallet safari overflow

--- a/src/app/wallet/wallet.component.scss
+++ b/src/app/wallet/wallet.component.scss
@@ -108,6 +108,9 @@
     margin-top: 40px;
     background-color: #F3F3F3;
     padding-bottom: 10px;
+    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    overflow: hidden;
 }
 .background-grey {
     background-color: #F3F3F3;
